--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_GRAFBASE_API_URL=http://localhost:4000/graphql
 
 # The NEXTAUTH_SECRET must match that set inside the grafbase/.env. 
 # You can generate one here: https://generate-secret.vercel.app
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET= "c520c2686ffe32fc2f18e5a96acf13f8"
 
 # Create a new GitHub app in your account settings to obtain these values
 GITHUB_CLIENT_ID=
