--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # This must be your local or Grafbase production API endpoint
 # Click "Connect" inside your Grafbase Project Dashboard to get the URL
-NEXT_PUBLIC_GRAFBASE_API_URL=http://localhost:4000/graphql
+NEXT_PUBLIC_GRAFBASE_API_URL=https://realtime-chat-app-main-hashbrownkazang.grafbase.app/graphql
 
 # The NEXTAUTH_SECRET must match that set inside the grafbase/.env. 
 # You can generate one here: https://generate-secret.vercel.app
-NEXTAUTH_SECRET= "c520c2686ffe32fc2f18e5a96acf13f8"
+NEXTAUTH_SECRET=c520c2686ffe32fc2f18e5a96acf13f8
 
 # Create a new GitHub app in your account settings to obtain these values
 GITHUB_CLIENT_ID=
