--- a/grafbase/.env
+++ b/grafbase/.env
@@ -1,3 +1,3 @@
 # This value must be the same as the root .env
 # You can generate one here: https://generate-secret.vercel.app
-NEXTAUTH_SECRET= "c520c2686ffe32fc2f18e5a96acf13f8"
+NEXTAUTH_SECRET=c520c2686ffe32fc2f18e5a96acf13f8
