--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ NEXT_PUBLIC_GRAFBASE_API_URL=https://realtime-chat-app-main-hashbrownkazang.graf
 NEXTAUTH_SECRET=c520c2686ffe32fc2f18e5a96acf13f8
 
 # Create a new GitHub app in your account settings to obtain these values
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=b10339099ca6199ffccb
+GITHUB_CLIENT_SECRET=176a32c8f81453ac74b431c063dd6682a3aa923c
